--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
+    "date-fns": "^3.6.0",
+    "lucide-react": "^0.368.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sonner": "^1.4.41",
+    "sooner": "^1.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
